software/masterchief/argocd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: masterchief
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: masterchief
  template:
    metadata:
      labels:
        app: masterchief
    spec:
      containers:
        - image: loonison101/masterchief:v2
          imagePullPolicy: Always
          name: masterchief
          ports:
            - containerPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: masterchief
  namespace: default
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  rules:
    - host: mc.lanekatris.com
      http:
        paths:
          - backend:
              service:
                name: masterchief
                port:
                  number: 3000
            pathType: Prefix
            path: /
---
apiVersion: v1
kind: Service
metadata:
  name: masterchief
  namespace: default
spec:
  selector:
    app: masterchief
  ports:
    - name: http
      port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esdb
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: esdb
  template:
    metadata:
      labels:
        app: esdb
    spec:
      volumes:
        - name: esdb-pv
          persistentVolumeClaim:
            claimName: esdb-pv-claim
        - name: esdb-logs-pv
          persistentVolumeClaim:
            claimName: esdb-logs-pv-claim
      containers:
        - image: eventstore/eventstore:20.10.2-buster-slim
          name: esdb
          ports:
            - containerPort: 1113
            - containerPort: 2113
          volumeMounts:
            - mountPath: /var/lib/eventstore
              name: esdb-pv
            - mountPath: /var/log/eventstore
              name: esdb-logs-pv
---
apiVersion: v1
kind: Service
metadata:
  name: esdb
  namespace: default
spec:
  selector:
    app: esdb
  ports:
    - name: esdb-http
      port: 2113
      targetPort: 2113
    - name: esdb-grpc
      port: 1113
      targetPort: 1113
